compiler-core/src/parse/snapshots/gleam_core__parse__tests__merge_conflict_lt_with_head_snapshot.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 430
expression: "let wobble: Int = 32\n        <<<<<<< HEAD"
---
----- SOURCE CODE
let wobble: Int = 32
        <<<<<<< HEAD

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:9
  │
2 │         <<<<<<< HEAD
  │         ^^^^^^^ I don't know how to handle this

Hint: resolve merge conflicts
